--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -1,17 +1,19 @@
 ﻿<Window x:Class="ProductApps.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="400" Width="525">
     <Grid>
         <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="46,37,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="46,113,0,0" VerticalAlignment="Top" Width="69" RenderTransformOrigin="0.371,0.498"/>
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
-        <Label Content="Total Charge after adding &#xA;the delivery charge ($25):" HorizontalAlignment="Left" Height="50" Margin="46,207,0,0" VerticalAlignment="Top" Width="150"/>
-        <Label Content="Total Charge after adding &#xA; the wrap charge ($5):" HorizontalAlignment="Left" Height="50" Margin="46,254,0,0" VerticalAlignment="Top" Width="150"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25):" HorizontalAlignment="Left" Height="50" Margin="46,195,0,0" VerticalAlignment="Top" Width="150"/>
+        <Label Content="Total Charge after adding &#xA; the wrap charge ($5):" HorizontalAlignment="Left" Height="50" Margin="46,240,0,0" VerticalAlignment="Top" Width="150"/>
+        <Label Content="Total Charge After GST @10%:" HorizontalAlignment="Left" Height="30" Margin="30,285,0,0" VerticalAlignment="Top" Width="180"/>
         <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="left" Height="23" Margin="210,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBlock x:Name="totalChargeAfterWrapTextBlock" HorizontalAlignment="left" Height="23" Margin="210,265,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock x:Name="totalChargeTextBlock" HorizontalAlignment="left" Height="23" Margin="210,205,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock x:Name="totalChargeAfterWrapTextBlock" HorizontalAlignment="left" Height="23" Margin="210,250,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock x:Name="totalChargeAfterGSTTextBlock" HorizontalAlignment="left" Height="23" Margin="210,290,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
         <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
